# Frippy

./: CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindMBEDTLS.cmake
html/: upload.php
include/: Clipboard.h  Keyboard.h  Notifier.h  SystemUtil.h  Uploader.h
src/: Clipboard.cpp  Keyboard.cpp  Notifier.cpp  Uploader.cpp
